hotfix: remove unnecessary log statements and optimize invoice retrieval logic (#26)
Co-authored-by: lucassantos <lukascosta.ls17@gmail.com>